<resources>
  <string name="app_name">Office Hours</string>
  <string name="login_failure">Unable to loging with the provided credentials.</string>
  <string name="sign_out">Sign out</string>
  <string name="hello_blank_fragment">Hello blank fragment</string>
  <string name="user_format">"%s"</string>
  <string name="attribution_format"><![CDATA[&#x2015;%s]]></string>
  <string name="previous">Previous</string>
  <string name="next">Next</string>
  <string name="user_nickname">User Nickname</string>
  <string name="select_teacher">Select Teacher</string>
  <string name="teacher_label">Teacher:</string>
  <string name="appointment_date">Appointment Date</string>
  <string name="appointment_start">Start Time</string>
  <string name="appointment_end">End Time</string>
  <string name="select_subject">Select Subject</string>
  <string name="select_student">Select Student</string>
</resources>
