<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  tools:context=".controller.EditAppointmentFragment">

  <androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="8dp">
    
    <Spinner
      android:id="@+id/students"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:spinnerMode="dialog"
      android:prompt="@string/select_student"
      app:layout_constraintTop_toTopOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintEnd_toEndOf="parent"/>
    
    <Spinner
      android:id="@+id/subjects"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:spinnerMode="dialog"
      android:prompt="@string/select_subject"
      app:layout_constraintTop_toBottomOf="@id/students"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintEnd_toEndOf="parent"/>

    <com.google.android.material.textfield.TextInputLayout
      android:id="@+id/start_date_layout"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      app:hintEnabled="true"
      app:hintAnimationEnabled="true"
      app:layout_constraintTop_toBottomOf="@id/subjects"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintEnd_toEndOf="parent">

      <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/start_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="none"
        android:hint="@string/appointment_date"
        android:editable="false"
        android:drawableEnd="@drawable/ic_today"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
      android:id="@+id/start_time_layout"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      app:hintEnabled="true"
      app:hintAnimationEnabled="true"
      app:layout_constraintTop_toBottomOf="@id/start_date_layout"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintEnd_toStartOf="@+id/end_time_layout">

      <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/start_time"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="none"
        android:hint="@string/appointment_start"
        android:editable="false"
        android:drawableEnd="@drawable/ic_time"/>

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
      android:id="@+id/end_time_layout"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      app:hintEnabled="true"
      app:hintAnimationEnabled="true"
      app:layout_constraintTop_toBottomOf="@id/start_date_layout"
      app:layout_constraintStart_toEndOf="@id/start_time_layout"
      app:layout_constraintEnd_toEndOf="parent">

      <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/end_time"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="none"
        android:hint="@string/appointment_end"
        android:editable="false"
        android:drawableEnd="@drawable/ic_time"/>

    </com.google.android.material.textfield.TextInputLayout>
  </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>